--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=verifact
 spring.ai.openai.api-key=${OPEN_AI_API_KEY}
-spring.google.api-key=${GOOGLE_API_KEY}
-spring.google.search.engine_id=${GOOGLE_SEARCH_ENGINE}
+
+google.api.key=${GOOGLE_API_KEY}
+google.cse.id=${GOOGLE_SEARCH_ENGINE}
+
 server.port=8080
