UPDATED IMAGE SIZE

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,7 @@ spring.ai.openai.api-key=${OPEN_AI_API_KEY}
 google.api.key=${GOOGLE_API_KEY}
 google.cse.id=${GOOGLE_SEARCH_ENGINE}
 
+spring.servlet.multipart.max-file-size=50MB
+spring.servlet.multipart.max-request-size=50MB
+
 server.port=8080
